начало структуры стилей по БЭМ

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cardo:ital@1&family=Open+Sans:wght@700&family=Raleway:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
-    <link rel="stylesheet" href="style.css">
+<!--    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />-->
+<!--    <link rel="stylesheet" href="style.css">-->
+  <link rel="stylesheet" href="./pages/index.css">
     <meta name="viewport" content="widht=device-widht, initial-scale=1">
 
     <!--favicons:https://realfavicongenerator.net/-->
@@ -42,7 +43,7 @@
                     <a class='nav_link' href="#" data-scroll="#works">WORKS</a>
                     <a class='nav_link' href="#" data-scroll="#team">OUR TEAM</a>
                     <a class='nav_link' href="#" data-scroll="#reviews">TESTIMONIALS</a>
-                    <a class='nav_link' href="#" data-scroll="#downloud">DOWNLOAD</a>
+                    <a class='nav_link' href="#" data-scroll="#download">DOWNLOAD</a>
                 </nav>
                 <button class="burger" type="button" id="navToggle">
                     <span class="burger_item">Menu</span>
@@ -102,8 +103,8 @@
         <!--/.features-->
     </div>
     <!--/.container-->
-    <!--    Works-->
 
+    <!--    Works-->
     <div class="works" id="works">
         <div class="works_item">
             <img class="works_Photo" src="images/work/work-1.jpg" alt="">
@@ -196,7 +197,6 @@
                             </svg>
                         </a>
                     </div>
-
                 </div>
 
                 <div class="team_item">
@@ -225,7 +225,6 @@
                             </svg>
                         </a>
                     </div>
-
                 </div>
 
                 <div class="team_item">
@@ -323,12 +322,12 @@
 
 
     <!--    Downloud-->
-    <div class="downloud" id="downloud">
+    <div class="download" id="download">
         <div class="container">
             <h3 class="download__title">
                 Are You Ready to Start? Download Now For Free!
             </h3>
-            <div class="downloud_text">
+            <div class="download_text">
                 <p>Fusce dapibus, tellus ac cursus commodo</p>
             </div>
             <a class="btn btn--red btn--long" href="#">Download Here</a>
@@ -338,12 +337,11 @@
     <!--    Footer-->
     <div class="footer">
         <div class="container">
-
             <div class="footer__innet">
                 <div class="foter_block">
                     <h4 class="footer_title">Location</h4>
                     <address class="footer__address">
-                        <div>3481 Melrose Place </div>
+                        <div>3481 Melrose Place</div>
                         <div>Beverly Hills, CA 90210</div>
                     </address>
                 </div>
